[Amir] some enhancements to the openapi docs
